--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;1,9..40,100;1,9..40,300;1,9..40,500;1,9..40,700&family=DM+Serif+Display:ital@0;1&display=swap');
+
+body {
+  font-family: 'DM Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'DM Serif Display', serif;
+}
+
 body {
   background-color: white;
 }
 
 .hero-banner{
-  background-image: url("/assets/bbg.jpg");
+  background-image: url("/assets/background/bbg.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -28,14 +39,4 @@ body {
   background-image: url("/assets/bbg.jpg");
   background-size: cover;
   background-position: center;
-}
-
-.header-font {
-  font-family: 'Montserrat', sans-serif;
-  /* Add any other styles you need for headers */
-}
-
-.paragraph-font {
-  font-family: 'Roboto', sans-serif; /* Use Roboto for paragraphs */
-  /* Add any other styles you need for paragraphs */
 }
